Correction du titre h2 sur la version tablette

--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -493,6 +493,10 @@ h6 {
         margin-top: 50px;
     }
 
+    .populaires-title h2{
+        font-size: 22px;
+    }
+
     .populaires-cards {
         display: flex;
         flex-direction: row;
